# newsletter-generator

./: .gitignore  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
src/: newsletter-gen.py
src/compositor_agent/: agent.py  state.py
src/enrichment_agent/: __init__.py  agent.py  configuration.py  nodes.py  prompts.py  state.py  tools.py  utils.py
src/newsletter_designer/: agent.py  configuration.py  nodes.py  prompts.py  requirements.txt  state.py  tools.py  utils.py
src/source_researcher/: agent.py  configuration.py  nodes.py  prompts.py  state.py  tools.py  utils.py
tests/initial_test/: test.py
tests/integration_test/: test.py
